# chesscv

./: .gitignore  README.md  bounding_boxes.jsonl  categories.json  fetch_images.sh  pyproject.toml
.github/workflows/: build.yml
chess-recognition/: chess.py  main.py  util.py
chesscv/: chess.py  main.py  util.py
scripts/: fetch_images.sh  provision_infrastructure.sh
terraform/: ecr.tf  main.tf
