[tool.poetry]
name = "chess-recognition"
version = "0.1.0"
description = "Recognize chess position from images"
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
