[tool.poetry]
name = "chesscv"
version = "0.1.0"
description = "Recognize chess position from images"
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
joptional = "^0.1.1"
click = "^8.1.7"
opencv-python = "^4.9.0.80"
boto3 = "^1.34.93"

[tool.poetry.scripts]
images = "chesscv.main:images"
analyze = "chesscv.main:analyze"
pre-process = "chesscv.main:pre_process"
visualize = "chesscv.main:visualize"
upload = "chesscv.main:upload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
